Tried to make the app all-in-one. Failed to emulate locally. Didn't deploy well either

--- a/lol-doku-frontend/firebase.json
+++ b/lol-doku-frontend/firebase.json
@@ -1,14 +1,27 @@
 {
   "hosting": {
-    "source": ".",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
     "frameworksBackend": {
-      "region": "asia-east1",
+      "region": "us-central1",
       "maxInstances": 1
-    }
+    },
+    "predeploy": [
+      "npm run build"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "ssrServer"
+      }
+    ]
+  },
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20"
   }
 }
