--- a/lol-doku-frontend/package.json
+++ b/lol-doku-frontend/package.json
@@ -25,7 +25,9 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prisma": "^5.14.0",
 		"svelte": "^4.2.7",
+		"svelte-adapter-firebase": "^0.15.0",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -33,6 +35,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@google-cloud/functions": "^3.4.0",
+		"@prisma/client": "^5.14.0",
+		"firebase-admin": "^12.1.1",
+		"firebase-functions": "^5.0.1",
 		"svelte-tippy": "^1.3.2",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1"
